fix spacing between contents

--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -238,7 +238,7 @@ color: #000202;
     width: 20%;
     min-width: 50px;
     float: left;
-    margin: 10px 10px 85px 10px;
+    margin: 10px 10px 90px 10px;
 }
 
 .certs-img {
